namespace rent_for_students.Application.Common
{
    public static class ErrorCodes
    {
        public const string ValidationError = "VALIDATION_ERROR";
        public const string NotFound = "NOT_FOUND";
        public const string ListingNotAvailable = "LISTING_NOT_AVAILABLE";
        public const string NotFoundOrNotDraft = "NOT_FOUND_OR_NOT_DRAFT";
    }
}
